--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, Trial running. Dublin docklans and Phoenix Park ">
+    <meta name="keyword" content ="love running, run, running club, runners, Ireland, Dublin, sport, excercise"
+
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
