Add font awesome for the facebook logo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
      <!--Main-->
     <main>Main Content</main>
      <!--Footer-->
-    <Footer>Footer</Footer>
+    <Footer>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+        </ul>
+    </Footer>
+      
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/2b8f133eab.js" crossorigin="anonymous"></script>
 </body>
 </html>
