--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main>Main Content</main>
      <!--Footer-->
     <Footer>
-        <ul>
+        <ul id="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
