Added the Hero imgae and psoition

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
             </ul>
         </nav>
     </header>
-     <!--Main-->
-    <main>Main Content</main>
+    
+      <!-- Main content -->
+      <main>
+        <section id="hero"></section>
+    </main>
+
      <!--Footer-->
     <Footer>
         <ul id="social-networks">
