--- a/index.html
+++ b/index.html
@@ -35,10 +35,16 @@
             </ul>
         </nav>
     </header>
-    
-      <!-- Main content -->
-      <main>
-        <section id="hero"></section>
+
+
+    <!-- Main content -->
+    <main>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & Phoenix Park</h3>
+            </div>
+        </section>
     </main>
 
      <!--Footer-->
